--- a/domain.yml
+++ b/domain.yml
@@ -81,5 +81,5 @@ responses:
     - text: "Maaf, saya tidak mengerti pertanyaan Anda. Silahkan hubungi kontak customer service kami pada nomor 081283270843 atau email ke info@idlinkmedia.com"
 
 session_config:
-  session_expiration_time: 60
+  session_expiration_time: 60 #Jika user tidak mengirim pesan selama 60 menit, maka sesi dianggap selesai. Jika user kembali setelah itu, maka sesi baru akan dibuat.
   carry_over_slots_to_new_session: true
